--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang=en>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="main.css" />
     <title>Document</title>
 </head>
 <body>
     <center>
         <h1>Hello World<h1>
         <iframe 
-            width="480" height="272" src="https://www.youtube.com/embed/vJMP7RBsoms">
+            width="480" height="272" frameborder="0" src="https://www.youtube.com/embed/vJMP7RBsoms">
         </iframe> 
     </center>
 </body>
