--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang=fr>
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="main.css" />
-    <link href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500' rel='stylesheet' />
+    <link href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500' rel='stylesheet' />
     <title>Document</title>
 </head>
 <body>
     <center>
-        <h1>Hello World<h1>
-        <iframe 
-            width="480" height="272" frameborder="0" src="https://www.youtube.com/embed/vJMP7RBsoms">
-        </iframe> 
+    <ul>
+        <li>Home</li>
+        <li>News</li>
+        <li>Contact</li>
+        <li>About</li>
+    </ul>
+    <h1>Hello World<h1>
+    <iframe 
+        width="480" height="272" frameborder="0" src="https://www.youtube.com/embed/vJMP7RBsoms">
+    </iframe> 
     </center>
+
 </body>
 </html>
