--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html lang=fr>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <link href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500' rel='stylesheet' />
-    <title>Document</title>
+    <title>Tea Factory</title>
 </head>
+<header>
+    <ul>
+        <li><a href="pages/thes.html">Thés</a></li>
+        <li><a href="pages/mugs.html">Mugs</a></li>
+        <li><a href="pages/panier.html">Mon panier</a></li>
+    </ul>
+</header>
 <body>
     <center>
-    <ul>
-        <li>Home</li>
-        <li>News</li>
-        <li>Contact</li>
-        <li>About</li>
-    </ul>
-    <h1>Hello World<h1>
-    <iframe 
-        width="480" height="272" frameborder="0" src="https://www.youtube.com/embed/vJMP7RBsoms">
-    </iframe> 
-    </center>
-
+    <div class="title">
+        <h1>Bienvenue à Tea Factory<h1>
+    </div>
+    <div class="tea-images">
+        <img width="200" src="images/tea1.jpg">
+        <img width="200" src="images/tea2.jpg">
+        <img width="200" src="images/tea3.jpg">
+    </div> 
+    </center> 
 </body>
 </html>
