--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
-    <link href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500' rel='stylesheet' />
+    <link href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500;400;300;200' rel='stylesheet' />
     <title>Tea Factory</title>
 </head>
 <header>
     <ul>
+        <li><a href="index.html">Accueil</a></li>
         <li><a href="pages/thes.html">Thés</a></li>
         <li><a href="pages/mugs.html">Mugs</a></li>
-        <li><a href="pages/panier.html">Mon panier</a></li>
+        <li><a href="pages/contact.html">Contact</a></li>
     </ul>
 </header>
 <body>
@@ -20,9 +21,15 @@
         <h1>Bienvenue à Tea Factory<h1>
     </div>
     <div class="tea-images">
-        <img width="200" src="images/tea1.jpg">
-        <img width="200" src="images/tea2.jpg">
-        <img width="200" src="images/tea3.jpg">
+        <a href="pages/thes.html#tea1"> 
+            <img width="300" src="images/tea1.jpg"> 
+        </a>
+        <a href="pages/thes.html#tea2"> 
+            <img width="300" src="images/tea2.jpg">
+        </a>
+        <a href="pages/thes.html#tea3">
+            <img width="300" src="images/tea3.jpg">
+        </a>
     </div> 
     </center> 
 </body>
