--- a/pages/thes.html
+++ b/pages/thes.html
@@ -3,7 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="../main.css" />
     <link href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500' rel='stylesheet' />
     <title>Teas</title>
 </head>
+<header>
+    <ul>
+        <li><a href="../index.html">Accueil</a></li>
+        <li><a href="thes.html">Thés</a></li>
+        <li><a href="mugs.html">Mugs</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</header>
+<body>
+    <center>
+    <div class="title">
+        <h1>Selection de thés<h1>
+    </div>
+    </center>
+    <div class="main-box">
+        <div id=tea1 class="tea-image-box">
+            <img class="tea-image" width=400 src="../images/tea1.jpg">
+        </div>
+        <div class="tea-text-box"></a>
+            <p class="tea-text">Perles de Jasmin</p>
+            <p class="tea-subtext">Thé vert au jasmin du Fujian, Chine</p>
+            <p class="tea-desc">Un Grand Cru aux notes florales, opulentes et fraîches.</p>
+            <p class="tea-price">34,00 €</p>
+            <p class="tea-price-alt">(34,00 € / 100g)</p>
+        </div>
+        <div id=tea2 class="tea-image-box">
+            <img class="tea-image" width=400 src="../images/tea2.jpg">
+        </div>
+        <div class="tea-text-box">
+            <p class="tea-text">Aiguilles d&#39;Argent de Lao Cai</p>
+            <p class="tea-subtext">Thé blanc de Lao Cai, Vietnam</p>
+            <p class="tea-desc">Un Grand Cru aux notes de vanille et de fleurs fraîches.</p>
+            <p class="tea-price">31,00 €</p>
+            <p class="tea-price-alt">(62,00 € / 100g)</p>
+        </div>
+        <div id=tea3 class="tea-image-box">
+            <img class="tea-image" width=400 src="../images/tea3.jpg">
+        </div>
+        <div class="tea-text-box">
+            <p class="tea-text">Jin Xuan Moc Chau</p>
+            <p class="tea-subtext">Oolong de Moc Chau, Vietnam</p>
+            <p class="tea-desc">Un Grand Cru aux notes intenses de cerise et d'osmanthus.</p>
+            <p class="tea-price">32,00 €</p>
+            <p class="tea-price-alt">(32,00 € / 100g)</p>
+        </div>
+
+    </div>
+</body>
