--- a/pages/mugs.html
+++ b/pages/mugs.html
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="main.css" />
+    <link rel="stylesheet" type="text/css" href="../main.css" />
     <link href='https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500' rel='stylesheet' />
     <title>Mugs</title>
 </head>
+<header>
+    <ul>
+        <li><a href="../index.html">Accueil</a></li>
+        <li><a href="thes.html">Thés</a></li>
+        <li><a href="mugs.html">Mugs</a></li>
+        <li><a href="contact.html">Contact</a></li>
+    </ul>
+</header>
