--- a/pages/contact.html
+++ b/pages/contact.html
@@ -31,12 +31,15 @@
     </div>
     <div class="contact-form-box">
         <form action="contact.php">
-            <label for="fname">First name
-            </label>
-            <input type="text" id="fname" name="fname"><br><br>
-            <label for="lname">Last name:</label>
-            <input type="text" id="lname" name="lname"><br><br>
-            <input type="submit" value="Submit">
+            <input type="text" class="input" placeholder="Nom">
+            <input type="text" class="input" placeholder="Prenom">
+            <input type="text" class="input" placeholder="Adresse email"></br></br>
+            <div class="message-box">
+                <input type="text" class="input-message" placeholder="Message">
+            </div>
+            <div class="button-box">
+                <button class=button type="submit">Envoyer</button>
+            </div>
         </form>
     </div>
 </body>
